# git-mirror

./: Cargo.toml
.github/workflows/: release.yml
src/: app.rs  config.rs  git.rs  lib.rs  main.rs  sync.rs
tests/: integration_tests.rs
